crates/ridge-parser/tests/fixtures/errors/p013_deferred_instance.rg
-- expect: P013
-- Trigger: `instance` keyword is reserved/deferred to 0.2.0.
instance Eq Int = unit
